# gateau

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  constant_key.ipynb
.github/: FUNDING.yml
.github/workflows/: changelog.yml  docs.yml  release.yml  tag.yml  test.yml
assets/: demo.tape  gateau.cast
cliff/: complete.toml  release.toml
docs/: README.md  astro.config.mjs  astro.config.ts  bun.lockb  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/first-steps/: getting-started.md  getting-started.mdx  howto.mdx  support.mdx
docs/src/pages/: demo._astro
docs/src/styles/: custom.css  landing.css
gateau/: Cargo.toml
gateau/src/: app.rs  browser.rs  chrome.rs  firefox.rs  lib.rs  main.rs  url.rs  utils.rs
gateau/src/app/: output.rs  session.rs
gateau/src/browser/: chrome.rs  firefox.rs
gateau/src/browser/chrome/: encrypted_value.rs  paths.rs
gateau/src/browser/chrome/encrypted_value/: linux.rs  posix.rs  windows.rs
gateau/src/browser/firefox/: paths.rs
gateau/src/chrome/: encrypted_value.rs  paths.rs
gateau/src/chrome/encrypted_value/: linux.rs  mac.rs  posix.rs  windows.rs
gateau/src/firefox/: paths.rs
xtask/: Cargo.toml
xtask/src/: main.rs
