[workspace]
members = ["packages/*"]
default-members = ["packages/gateau","packages/cli"]
resolver = "2"

[workspace.dependencies]
cookie = "^0.18.1"
serde = { version = "^1.0.210" }
serde_json = "^1.0.128"

[profile.release-opt]
inherits = "release"
strip = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-debuginfo]
inherits = "release"
debug = true
