[package]
name = "gateau"
version = "0.1.0"
edition = "2021"

[lib]
name = "gateau"
path = "src/lib.rs"

[[bin]]
name = "gateau"
path = "src/main.rs"

[dependencies]
aes = "0.8.2"
bpaf = { version = "0.7.6", features = ["derive", "bright-color"] }
cfg-if = "1.0.0"
color-eyre = "0.6.2"
cookie = "0.16.1"
http = "0.2.8"
keyring = "1.2.0"
once_cell = "1.16.0"
pbkdf2 = { version = "0.11.0", features = ["sha1", "std"] }
rusqlite = { version = "0.28.0", features = ["functions"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tini = "1.3.0"
tempfile = "3.3.0"
dirs-next = "2.0.0"
itertools = "0.10.5"
rayon = "1.6.1"
cached = { version = "0.41.0", features = ["proc_macro"], default-features = false }

[features]
default = []

[target.'cfg(unix)'.dependencies]
cbc = { version = "0.1.2", features = ["std"] }

[target.'cfg(windows)'.dependencies]
aes-gcm = "0.10.1"
base64ct = { version = "1.5.3", features = ["std"] }
windows = { version = "*", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
] }
