[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.14", features = ["batteries", "derive"] }
cargo_metadata = "0.18.1"
color-eyre = "0.6.2"
xshell = "0.2.3"
